--- a/Dao/res/layout/activity_main.xml
+++ b/Dao/res/layout/activity_main.xml
@@ -1,16 +1,46 @@
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context=".MainActivity" >
+<?xml version="1.0" encoding="utf-8"?>
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="fill_parent"
+    android:layout_height="fill_parent"
+    android:orientation="vertical" >
 
-    <TextView
-        android:layout_width="wrap_content"
+    <LinearLayout
+        android:id="@+id/linearLayout1"
+        android:layout_width="fill_parent"
         android:layout_height="wrap_content"
-        android:text="@string/hello_world" />
+        android:orientation="horizontal" >
 
-</RelativeLayout>
+        <EditText
+            android:id="@+id/editTextLat"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:hint="Enter new lat"
+            android:imeOptions="actionDone"
+            android:inputType="text" >
+        </EditText>
+
+        <EditText
+            android:id="@+id/editTextLon"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:hint="Enter new lon"
+            android:imeOptions="actionDone"
+            android:inputType="text" >
+        </EditText>
+
+        <Button
+            android:id="@+id/buttonAdd"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:onClick="onMyButtonClick"
+            android:text="Add" >
+        </Button>
+    </LinearLayout>
+
+    <ListView
+        android:id="@android:id/list"
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content" >
+    </ListView>
+
+</LinearLayout>
